app/src/test/resources/programs/invalid/BreakLoopOutsideOfRange.extension
fun main() -> Int = {
    loop@firstLoop {
        // Correct loop
        break 1;
    }

    loop {
        break@firstLoop 1;
    }

}